# esp32-s3-m5

./: .git-commit-message.yaml  .gitignore  AGENTS.md  THE_BOOK.md  project_history.db  tutorial-ideas.md
0013-atoms3r-gif-console/main/: CMakeLists.txt  Kconfig.projbuild  backlight.cpp  backlight.h  console_repl.cpp  console_repl.h  control_plane.cpp  control_plane.h  display_hal.cpp  display_hal.h  gif_player.cpp  gif_player.h  gif_registry.cpp  gif_registry.h  gif_storage.cpp  gif_storage.h  hello_world_main.cpp  uart_rx_heartbeat.cpp  uart_rx_heartbeat.h
0016-atoms3r-grove-gpio-signal-tester/main/: CMakeLists.txt  Kconfig.projbuild  backlight.cpp  backlight.h  console_repl.cpp  console_repl.h  control_plane.cpp  control_plane.h  display_hal.cpp  display_hal.h  gpio_rx.cpp  gpio_rx.h  gpio_tx.cpp  gpio_tx.h  hello_world_main.cpp  lcd_ui.cpp  lcd_ui.h  manual_repl.cpp  manual_repl.h  signal_state.cpp  signal_state.h  uart_tester.cpp  uart_tester.h
0017-atoms3r-web-ui/main/: CMakeLists.txt  Kconfig.projbuild  backlight.cpp  button_input.cpp  button_input.h  display_app.cpp  display_app.h  display_hal.cpp  display_hal.h  hello_world_main.cpp  http_server.cpp  http_server.h  storage_fatfs.cpp  storage_fatfs.h  uart_terminal.cpp  uart_terminal.h  wifi_app.cpp  wifi_app.h  wifi_softap.cpp  wifi_softap.h
0017-atoms3r-web-ui/main/assets/: app.css  app.js  index.html
0020-cardputer-ble-keyboard-host/main/: CMakeLists.txt  app_main.c  ble_host.c  ble_host.h  bt_console.c  bt_console.h  bt_decode.c  bt_decode.h  bt_host.c  bt_host.h  hid_host.c  hid_host.h  keylog.c  keylog.h
0021-atoms3-memo-website/main/: CMakeLists.txt  Kconfig.projbuild  http_server.cpp  idf_component.yml  main.cpp  recorder.cpp  recorder.h  storage_spiffs.cpp  storage_spiffs.h  wifi.cpp  wifi.h  wifi_apsta.cpp  wifi_apsta.h  wifi_common.cpp  wifi_common.h  wifi_softap.cpp  wifi_softap.h  wifi_sta.cpp  wifi_sta.h
0021-atoms3-memo-website/main/assets/: index.html
0022-cardputer-m5gfx-demo-suite/main/: CMakeLists.txt  app_main.cpp  demo_a1_hud.cpp  demo_a1_hud.h  demo_b2_perf.cpp  demo_b2_perf.h  demo_b3_screenshot.cpp  demo_b3_screenshot.h  demo_d1_text_fonts.cpp  demo_d1_text_fonts.h  demo_d2_text_wrap.cpp  demo_d2_text_wrap.h  demo_d3_text_utf8.cpp  demo_d3_text_utf8.h  demo_plasma.cpp  demo_plasma.h  demo_primitives.cpp  demo_primitives.h  input_keyboard.cpp  input_keyboard.h  screenshot_png.cpp  screenshot_png.h  ui_console.cpp  ui_console.h  ui_hud.cpp  ui_hud.h  ui_list_view.cpp  ui_list_view.h
0025-cardputer-lvgl-demo/main/: CMakeLists.txt  Kconfig.projbuild  action_registry.cpp  action_registry.h  app_main.cpp  command_palette.cpp  command_palette.h  console_repl.cpp  console_repl.h  control_plane.cpp  control_plane.h  demo_basics.cpp  demo_file_browser.cpp  demo_file_viewer.cpp  demo_manager.cpp  demo_manager.h  demo_menu.cpp  demo_pomodoro.cpp  demo_split_console.cpp  demo_system_monitor.cpp  idf_component.yml  input_keyboard.cpp  input_keyboard.h  lvgl_font_util.h  lvgl_port_cardputer_kb.cpp  lvgl_port_cardputer_kb.h  lvgl_port_m5gfx.cpp  lvgl_port_m5gfx.h  screenshot_png.cpp  screenshot_png.h  sdcard_fatfs.cpp  sdcard_fatfs.h  split_console_log.h
0029-mock-zigbee-http-hub/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  hub_bus.c  hub_http.c  hub_http.h  hub_pb.c  hub_pb.h  hub_registry.c  hub_stream.h  hub_types.h  wifi_console.c  wifi_sta.c  wifi_sta.h
0029-mock-zigbee-http-hub/main/ui/: app.js  index.html
0030-cardputer-console-eventbus/components/proto/: CMakeLists.txt
0031-zigbee-orchestrator/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  gw_bus.c  gw_bus.h  gw_console.c  gw_console.h  gw_console_cmds.c  gw_console_cmds.h  gw_registry.c  gw_registry.h  gw_req_id.c  gw_req_id.h  gw_types.h  gw_zb.c  gw_zb.h  gw_zb_app_signal.c  hub_bus.h  hub_http.c  hub_pb.c  hub_pb.h  hub_registry.c  hub_registry.h  hub_sim.c  hub_sim.h  hub_stream.c  wifi_sta.c
0038-cardputer-adv-serial-terminal/main/: Adafruit_TCA8418.cpp  Adafruit_TCA8418.h  Adafruit_TCA8418_registers.h  CMakeLists.txt  Kconfig.projbuild  app_state.cpp  app_state.h  console_repl.cpp  console_repl.h  fan_cmd.cpp  fan_cmd.h  fan_control.cpp  fan_control.h  hello_world_main.cpp  relay_control.cpp  relay_control.h
0039-cardputer-adv-js-gpio-exercizer/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  esp32_stdlib.h  esp32_stdlib_runtime.c  js_bindings.cpp  js_bindings.h
0039-cardputer-adv-js-gpio-exercizer/main/console/: IConsole.h  UartConsole.cpp  UartConsole.h  UsbSerialJtagConsole.cpp  UsbSerialJtagConsole.h
0039-cardputer-adv-js-gpio-exercizer/main/repl/: ReplLoop.h  (+1 more)
0045-xiao-esp32c6-preact-web/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  http_server.c  wifi_console.c  wifi_mgr.c  wifi_mgr.h
0046-xiao-esp32c6-led-patterns-webui/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  http_server.c  led_console.c  led_console.h  led_patterns.c  led_task.c  wifi_console.c
0048-cardputer-js-web/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  chain_encoder_uart.cpp  chain_encoder_uart.h  encoder_telemetry.cpp  encoder_telemetry.h  esp32_stdlib.h  esp32_stdlib_runtime.c  http_server.cpp  http_server.h  js_console.cpp  js_console.h  js_runner.cpp  js_runner.h  js_service.cpp  js_service.h  wifi_app.cpp  wifi_app.h  wifi_console.c  wifi_console.h  wifi_mgr.c  wifi_mgr.h
0049-xiao-esp32c6-mled-node/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  led_task.h  led_ws281x.c  mled_effect_led.c  mled_effect_led.h  mled_node.c  mled_node.h  mled_protocol.c  mled_protocol.h  wifi_console.c  wifi_console.h  wifi_mgr.c  wifi_mgr.h
0065-xiao-esp32c6-gpio-web-server/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  gpio_ctl.c  gpio_ctl.h  http_server.c  http_server.h  oled_font_5x7.h  oled_status.c  oled_status.h
0066-cardputer-adv-ledchain-gfx-sim/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  http_server.cpp  http_server.h  sim_console.cpp  sim_console.h  sim_engine.cpp  sim_engine.h  sim_ui.cpp  sim_ui.h  tca8418.c  tca8418.h  ui_kb.cpp  ui_kb.h  ui_overlay.cpp  ui_overlay.h
(+1671 files in other folders)
