idf_component_register(
    SRCS
        "app_main.c"
        "led_ws281x.c"
        "ws281x_encoder.c"
        "led_patterns.c"
        "led_task.c"
        "led_console.c"
        "http_server.c"
    PRIV_REQUIRES
        wifi_mgr
        wifi_console
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp_http_server
        esp_timer
        esp_driver_rmt
        esp_driver_usb_serial_jtag
        console
        json
    EMBED_FILES
        "assets/assets/app.js.map.gz"
    EMBED_TXTFILES
        "assets/index.html"
        "assets/assets/app.js"
        "assets/assets/app.css"
    INCLUDE_DIRS "."
)
