idf_component_register(
    SRCS
        "app_main.cpp"
        "wifi_mgr.c"
        "wifi_console.c"
        "http_server.cpp"
        "js_runner.cpp"
        "encoder_telemetry.cpp"
        "chain_encoder_uart.cpp"
        "esp32_stdlib_runtime.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp_http_server
        esp_timer
        driver
        spiffs
        exercizer_control
        mquickjs
        esp_driver_usb_serial_jtag
        console
    EMBED_TXTFILES
        "assets/index.html"
        "assets/assets/app.js"
        "assets/assets/app.css"
)
