idf_component_register(
    SRCS
        "app_main.cpp"
        "js_console.cpp"
        "http_server.cpp"
        "js_runner.cpp"
        "js_service.cpp"
        "encoder_telemetry.cpp"
        "chain_encoder_uart.cpp"
        "esp32_stdlib_runtime.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        httpd_assets_embed
        httpd_ws_hub
        wifi_mgr
        wifi_console
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp_http_server
        esp_timer
        driver
        spiffs
        exercizer_control
        mquickjs
        esp_driver_usb_serial_jtag
        console
    EMBED_TXTFILES
        "assets/index.html"
        "assets/assets/app.js"
        "assets/assets/app.css"
)
