idf_component_register(
    SRCS
        "app_main.cpp"
        "sim_console.cpp"
        "sim_engine.cpp"
        "sim_ui.cpp"
        "http_server.cpp"
        "ui_kb.cpp"
        "ui_overlay.cpp"
        "tca8418.c"
        "mqjs/esp32_stdlib_runtime.c"
        "mqjs/js_service.cpp"
        "mqjs/mqjs_timers.cpp"
        "mqjs/mqjs_console.cpp"
    INCLUDE_DIRS "." "mqjs"
    EMBED_FILES
        "assets/index.html"
        "assets/app.js"
        "assets/app.css"
    REQUIRES
        M5GFX
        console
        ws281x
        wifi_mgr
        wifi_console
        esp_http_server
        httpd_assets_embed
        httpd_ws_hub
        cardputer_kb
        json
        mquickjs
        mqjs_vm
        mqjs_service
)
