idf_component_register(
  SRCS
    "app_main.cpp"
    "console/IConsole.cpp"
    "console/UartConsole.cpp"
    "console/UsbSerialJtagConsole.cpp"
    "esp32_stdlib_runtime.c"
    "eval/JsEvaluator.cpp"
    "eval/ModeSwitchingEvaluator.cpp"
    "eval/RepeatEvaluator.cpp"
    "repl/LineEditor.cpp"
    "repl/ReplLoop.cpp"
    "storage/Spiffs.cpp"
  INCLUDE_DIRS
    "."
  PRIV_REQUIRES
    esp_driver_uart
    esp_driver_usb_serial_jtag
    spiffs
    esp_timer
    exercizer_control
    mquickjs
    mqjs_vm
)
